package.json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "vue-dog-form",
+  "description": "The simplest vue 3 form validation plugin.",
+  "author": "yklim9938",
+  "keywords": ["vue", "form", "validation"],
+  "license": "MIT",
   "version": "1.0.4",
   "files": [
     "dist"
