--- a/package.json
+++ b/package.json
@@ -8,32 +8,41 @@
     "validation"
   ],
   "license": "MIT",
-  "version": "2.0.0",
+  "version": "3.0.0",
+  "type": "module",
   "files": [
-    "dist"
+    "dist/*"
   ],
-  "main": "./dist/vue-dog-form.umd.js",
-  "module": "./dist/vue-dog-form.es.js",
+  "main": "./dist/index.cjs",
   "exports": {
-    ".": {
-      "import": "./dist/vue-dog-form.es.js",
-      "require": "./dist/vue-dog-form.umd.js"
-    }
+    "import": "./dist/index.js",
+    "types": "./dist/index.d.ts"
   },
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/yklim9938/vue-dog-form"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.11"
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/tsconfig": "^0.5.1",
+    "npm-run-all2": "^7.0.1",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "~5.6.3",
+    "vite": "^5.4.10",
+    "vite-plugin-vue-devtools": "^7.5.4",
+    "vue-tsc": "^2.1.10"
   }
 }
