--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "license": "MIT",
   "version": "3.0.0",
   "type": "module",
-  "files": [
-    "dist/*"
-  ],
   "main": "./dist/index.cjs",
   "exports": {
-    "import": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/yklim9938/vue-dog-form"
@@ -39,9 +42,9 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^7.0.1",
-    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0",
     "vite-plugin-vue-devtools": "^7.5.4",
     "vue-tsc": "^2.1.10"
   }
